cluster/gitops/monitoring/grafana/app/grafana-alerting-manual.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-alerting-manual
spec:
  # Headless service
  type: ClusterIP
  clusterIP: None
  ports:
    - name: grafana-alert
      port: 9094
      targetPort: 9094
      protocol: TCP
  selector:
    app: grafana
