cluster/gitops/monitoring/grafana/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name grafana
  labels:
    k8s-app: *app_name
    app.kubernetes.io/part-of: grafana
spec:
  hostnames:
    - grafana.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove:
              - Authorization
